# pysigma-backend-qualys

./: pyproject.toml  readme.md  rule.yml  setup.py  test.py
sigma/backends/qualys/: __init__.py  qualys.py
sigma/pipelines/qualys/: __init__.py  qualys.py
tests/: test_backend.py  test_pipeline.py  test_qualys.py
