[tool.poetry]
name = "pysigma-backend-qualys"
version = "0.1.0"
description = "Qualys backend for pySigma"
authors = ["Parth Gol <parth.gol@foucore.io>"]
license = "MIT"
repository = "https://github.com/fourcore/pysigma-backend-qualys"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
coverage = "^7.6.9"
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s --cov=sigma"